# ginkgo

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  Dockerfile.worker-fuse  README.md  agents.ginkgo.md  install.sh  pyproject.toml  tests-update.md
.github/workflows/: benchmarks.yml  ci.yml  docs.yml  frontend.yml  quality.yml  security.yml  tests.yml
.serena/: project.yml
benchmarks/: __init__.py  bioinfo.py  harness.py  run.py  sources.py
benchmarks/baselines/: github-actions-linux.json  github-actions-linux.tsv
benchmarks/fuse_vs_stage/: run_bench.py  seed_data.py
benchmarks/fuse_vs_stage/workspace/: ginkgo.toml
benchmarks/results/20260331T094849Z/: results.json
benchmarks/results/20260331T095857Z/: results.json
benchmarks/results/20260331T100206Z/: results.json
benchmarks/results/20260331T100537Z/: results.json
benchmarks/results/20260331T100719Z/: results.json
benchmarks/results/20260331T100932Z/: results.json
benchmarks/sources/: bioinfo_agam.toml
docs/: architecture.md  collapsed-task-groups-plan.md  immutable-cache-writable-working-tree-plan.md  implementation-plan.md  phase-docs-site-plan.md  phase13-secrets-plan.md  phase16-benchmarking-plan.md  phase5-notebook-script-plan.md  phase6-remote-artifact-store-plan.md  phase6a-blob-tree-cas-plan.md  phase6b-remote-refs-staging-plan.md  phase6d-concurrent-staging-plan.md  phase7-asset-catalog-plan.md  phase7-follow-up-plan.md  phase8-dataframe-assets-plan.md  phase9-ml-support-plan.md  todo.md
docs/architecture/: agent-operability.md  assets.md  benchmarking.md  caching.md  cli.md  config-secrets.md  constraints.md  documentation-stack.md  execution-model.md  index.md  package-layout.md  project-layout.md  provenance.md  remote-execution.md  remote-input-access.md  reporting.md  task-model.md  validation.md  value-transport.md  web-ui.md
docs/misc/: agents.ginkgo.md
docs/site/: conf.py  faq.md  index.md  motivation.md
docs/site/_static/: custom.css
docs/site/examples/: bioinfo-workflow.md  notebook-task.md
docs/site/explanation/: architecture.md
docs/site/getting-started/: installation.md  quickstart.md
docs/site/guide/: assets.md  caching-and-provenance.md  cli-and-ui.md  cli.md  coding-agents.md  concepts.md  environments.md  notebooks.md  notifications.md  remote-execution.md  resources.md  tasks-and-flows.md
docs/site/reference/: api.md
examples/bioinfo/: ginkgo.toml  workflow.py
examples/bioinfo/.tests/: bioinfo_example.py
examples/bioinfo/bioinfo/: __init__.py  workflow.py
examples/bioinfo/data/: sample_a.fastq  sample_b.fastq  samples.csv
examples/chemistry_screening/: ginkgo.toml
examples/chemistry_screening/chemistry_screening/: __init__.py  workflow.py
examples/chemistry_screening/data/: compound_panel.csv
examples/init/: README.md  ginkgo.toml
examples/init/ginkgo_init_template/: workflow.py
examples/ml/: ginkgo.toml
examples/ml/data/: training_events.csv
examples/ml/ml_model_ops/: __init__.py  workflow.py
examples/ml_model_ops/ml_model_ops/: workflow.py
examples/newsroom/: ginkgo.toml
examples/newsroom/data/: story_backlog.csv
examples/newsroom/newsroom/: workflow.py
examples/retail/: ginkgo.toml
examples/retail/data/: customers.csv
examples/retail/retail_analytics/: workflow.py
examples/supply_chain/: ginkgo.toml
examples/supplychain/: ginkgo.toml
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
ginkgo/: __init__.py  config.py  helpers.py  wildcards.py
ginkgo/cli/: __init__.py  app.py  common.py
ginkgo/core/: __init__.py  asset.py  expr.py  notebook.py  notebook_expr.py  remote.py  script.py  script_expr.py  shell.py  task.py  types.py  wrappers.py
ginkgo/envs/: __init__.py  container.py  pixi.py  pixi_worker.py
ginkgo/remote/: __init__.py  backend.py  code_bundle.py  fsspec_backends.py  gcp_batch.py  kubernetes.py  publisher.py  resolve.py  s3_compat.py  staging.py  worker.py
ginkgo/reporting/: __init__.py  model.py  sizing.py
ginkgo/runtime/: __init__.py  artifact_model.py  artifact_store.py  asset_store.py  backend.py  cache.py  diagnostics.py  evaluator.py  events.py  hash_memo.py  hashing.py  materialization_log.py  notebook_kernels.py  notifications.py  profiling.py  provenance.py  remote_executor.py  remote_input_resolver.py  run_summary.py  scheduler.py  secrets.py  staging.py  task_validation.py  value_codec.py  worker.py
ginkgo/ui/: server.py
scripts/: build-worker.sh  gke-setup.sh  gke-teardown.sh
src/ginkgo/: __init__.py  config.py  formatting.py
tests/: _vw_support.py  conftest.py  test_agent_runtime_events.py  test_artifact_model.py  test_artifact_store.py  test_asset_store.py  test_assets.py  test_benchmarks.py  test_cache_integrity.py  test_cache_prune_assets.py  test_cli.py  test_code_bundle.py  test_container_backend.py  test_evaluator.py  test_examples.py  test_expr.py  test_fs_share.py  test_fsspec_base.py  test_fuse_tuning.py  test_gcs_remote.py  test_helpers.py  test_jsonl_renderer.py  test_kubernetes_executor.py  test_max_concurrent.py  test_module_loader.py  test_notifications.py  test_profiling.py  test_provenance.py  test_publisher.py  test_remote.py  test_remote_access.py  test_remote_artifact_store.py  test_remote_backend.py  test_remote_evaluator.py  test_remote_provenance.py  test_reporting.py  test_scheduler_priority.py  test_staging.py  test_subworkflow.py  test_task.py  (+15 more)
ui/: index.html  package-lock.json  vite.config.js
ui/public/: resource-monitor.js
ui/src/: App.jsx  styles.css
(+250 files in other folders)
