[project]
name = "ginkgo"
version = "0.1.0"
description = "A dynamic, reproducible workflow orchestrator for scientific and data workflows"
requires-python = ">= 3.11"
dependencies = [
    "blake3>=1.0.0",
    "numpy>=2.0",
    "ortools>=9.11",
    "pandas>=2.0",
    "pyarrow>=23.0.1,<24",
    "pyyaml>=6.0",
    "rich>=13.9",
]

[project.scripts]
ginkgo = "ginkgo.cli:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["ginkgo"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
ginkgo = { path = ".", editable = true }
numpy = ">=2.0"
ortools = ">=9.11"
pandas = ">=2.0"
pyarrow = ">=18.0"
rich = ">=13.9"

[tool.pixi.dependencies]
python = ">=3.11"
pyyaml = ">=6.0"
blake3 = ">=1.0.8,<2"
yaml = ">=0.2.5,<0.3"

[tool.pixi.feature.dev.dependencies]
pytest = ">=8.0"
ruff = ">=0.4"

[tool.pixi.feature.dev.pypi-dependencies]
pre-commit = ">=4.0"
ty = "*"

[tool.pixi.environments]
default = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]
test = "pytest tests/ -v"
lint = "ruff check ginkgo/ tests/"
format = "ruff format ginkgo/ tests/"
format-check = "ruff format --check ginkgo/ tests/"
typecheck = "ty check ginkgo/config.py ginkgo/ui ginkgo/cli/app.py ginkgo/cli/commands/ui.py"
precommit = "pre-commit run --all-files"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["ginkgo"]
line-length = 99
