[project]
name = "ginkgo"
version = "0.1.0"
description = "A dynamic, reproducible workflow orchestrator for scientific and data workflows"
requires-python = ">= 3.11"
license = "Apache-2.0"
dependencies = [
    "blake3>=1.0.0",
    "fsspec>=2024.10.0",
    "numpy>=2.0",
    "ocifs>=1.3.2",
    "ortools>=9.11",
    "pandas>=2.0",
    "pyarrow>=23.0.1,<24",
    "pyyaml>=6.0",
    "rich>=13.9",
    "s3fs>=2024.10.0",
]

[project.optional-dependencies]
notebooks = [
    "papermill>=2.6",
    "ipykernel>=6.29",
    "marimo>=0.11",
    "nbconvert>=7.16",
]
cloud = [
    "kubernetes>=28.1",
    "gcsfs>=2024.10.0",
    "google-auth>=2.25",
    "google-cloud-batch>=0.17",
    "google-cloud-logging>=3.10",
]

[project.scripts]
ginkgo = "ginkgo.cli:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["ginkgo"]

[tool.hatch.build]
include = ["ginkgo/templates/**"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
ginkgo = { path = ".", editable = true, extras = ["notebooks"] }
fsspec = ">=2024.10.0"
numpy = ">=2.0"
ocifs = ">=1.3.2"
ortools = ">=9.11"
pandas = ">=2.0"
pyarrow = ">=18.0"
rich = ">=13.9"
s3fs = ">=2024.10.0"

[tool.pixi.dependencies]
python = ">=3.11"
pyyaml = ">=6.0"
blake3 = ">=1.0.8,<2"
yaml = ">=0.2.5,<0.3"

[tool.pixi.feature.dev.dependencies]
pytest = ">=8.0"
ruff = ">=0.4"

[tool.pixi.feature.dev.pypi-dependencies]
pre-commit = ">=4.0"
ty = "*"
sphinx = ">=8.0"
myst-parser = ">=4.0"
furo = ">=2024.8.6"
sphinx-copybutton = ">=0.5.2"
joblib = ">=1.3"
scikit-learn = ">=1.3"

[tool.pixi.environments]
default = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]
test = "pytest tests/ -v"
benchmark = ".pixi/envs/default/bin/python -m benchmarks.run"
lint = "ruff check ginkgo/ tests/ benchmarks/"
format = "ruff format ginkgo/ tests/ benchmarks/"
format-check = "ruff format --check ginkgo/ tests/ benchmarks/"
typecheck = "env -u VIRTUAL_ENV .pixi/envs/default/bin/ty check ginkgo/config.py ginkgo/ui ginkgo/cli/app.py ginkgo/cli/commands/ui.py"
precommit = "pre-commit run --all-files"
docs-build = "sphinx-build -b dirhtml docs/site docs/_build/dirhtml"
docs-clean = "rm -rf docs/_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that spawn subprocesses or use real network I/O (deselect with -m 'not integration')",
]

[tool.ruff]
src = ["ginkgo"]
line-length = 99
